[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" #or setup tools


[project]
name = "requisite_lwinkler"
version = "0.1.0"
authors = [
  { name="Laurent Winkler", email="lwinkler888@gmail.com" },
]
description = "A software specs reader and verifier"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lwinkler/requisite"
# "Bug Tracker" = "https://github.com/lwinkler/sampleproject/issues"
